k8s/namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: signature-app
  labels:
    name: signature-app
